infra/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: demo-namespace
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000

---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: demo-namespace
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
